welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:4: error: not enough arguments for method faireMotif: (c: java.awt.Color)Unit.
Unspecified value parameter c.
      faireMotif()
                ^